SERVER-15022 don't rely on configServer.ok() for sharding state when recv'ing chunk

configServer global is not reset on replica set stepdown
Also better error messages when sharding state not enabled.